# Agentic-Document-Extraction-PDF

./: .env  .env.example  .gitignore  CLAUDE.md  CODEBASE_ISSUES_TRACKER.md  ENTERPRISE_GUIDE.md  PRD.md  README.md  SYSTEM_EVALUATION_REPORT.md  SYSTEM_ROUTES_AND_FUNCTIONALITY.md  VALIDATION_REPORT.md  app.py  config.json  consolidated_all_pages.xlsx  export_consolidated_multipage.py  export_multi_record_results.py  export_results.py  fix_tests_script.py  kill_port.py  main.py  multi_record_extraction_results.json  multi_record_results.md  process_21_pages_with_checkpoint.py  process_all_21_pages.py  pyproject.toml  quick_auth_test.py  quick_test.py  requirements.txt  run_auth_tests.py  run_multi_record.py  sensing_segmentation.ipynb  show_excel_contents.py  show_multi_record_excel.py  superbill_page1_results.md  superbill_page1_results.xlsx  test_auth_flow.py  test_field_extraction.py  test_full_vlm_pipeline.py  test_full_vlm_results.json  test_multi_record_extraction.py  (+5 more)
.claude/: settings.json  settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  cicd.yml
data/: revoked_tokens.json  users.json
docker/: .dockerignore  Dockerfile  docker-compose.prod.yml  docker-compose.yml  nginx.conf  prometheus.yml
docs/: AGENT_OPTIMIZATION_REPORT.md  Enterprise_Upgrade_Plan.md  MODES.md  OBSERVABILITY.md  PHI_MODE.md  README.md  REMAINING_WORK_AND_TESTING_PLAN.md  STATUS.md  VERIDOC_MASTER_PLAN.md  pending.md
files/: Complete_Project_Plan.md  Implementation_Plan.md  Local_Agentic_Document_Extraction_System.pptx
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
frontend/src/__tests__/: login.test.tsx  setup.tsx
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: providers.tsx
frontend/src/store/: authStore.ts
frontend/src/types/: api.ts
output/: superbill1_extraction.xlsx  superbill1_multi_record.xlsx
scripts/: README.md  setup_azure_env.ps1
src/: __init__.py
src/agents/: __init__.py  analyzer.py  base.py  component_detector.py  extractor.py  extractor_pass1.py  extractor_pass2.py  layout_agent.py  optimization.py  optimization_integration.py  orchestrator.py  reconciler.py  schema_generator.py  schema_proposal.py  splitter.py  table_detector.py  utils.py  validator.py
src/api/: __init__.py  app.py  middleware.py  models.py
src/api/routes/: auth.py  (+8 more)
src/client/: __init__.py  connection_manager.py  health_monitor.py  lm_client.py  model_router.py
src/config/: __init__.py  api_config.py  azure_config.py  extraction_config.py  logging_config.py  settings.py
src/debugging/: __init__.py
src/evaluation/: __init__.py  ab_testing.py  benchmark.py  golden_dataset.py  metrics.py  regression.py
src/export/: __init__.py  bbox_overlay.py  consolidated_export.py  excel_exporter.py  fhir_exporter.py  json_exporter.py  markdown_exporter.py
src/extraction/: __init__.py  data_processor.py  field_manager.py  llm_extractor.py  multi_record.py  schema_generator.py
src/memory/: __init__.py  context_manager.py  correction_tracker.py  mem0_client.py  vector_store.py
src/monitoring/: __init__.py  alerts.py  metrics.py  observability.py
src/pipeline/: __init__.py  graph.py  layout_types.py  runner.py  state.py
src/preprocessing/: __init__.py  base_processor.py  batch_manager.py  dicom_processor.py  docx_processor.py  edi_processor.py  file_factory.py  image_enhancer.py  image_processor.py  pdf_processor.py  spreadsheet_processor.py
src/processing/: image_processor.py  layout_analyzer.py  patient_segmenter.py  pdf_converter.py  pipeline.py  text_extractor.py
src/prompts/: __init__.py  classification.py  extraction.py  grounding_rules.py  synthetic_examples.py  validation.py
src/queue/: __init__.py  _url_safety.py  celery_app.py  tasks.py  webhook.py  webhook_dlq.py  webhook_store.py  worker.py
src/schemas/: __init__.py  base.py  cms1500.py  eob.py  field_types.py  generic_fallback.py  nested_schemas.py  schema_builder.py  ub04.py  validators.py  versioning.py
src/security/: __init__.py  audit.py  data_cleanup.py  encryption.py  path_validator.py  phi_mask.py  rbac.py
src/services/: llm_service.py
src/storage/: __init__.py  result_store.py
src/utils/: __init__.py  date_utils.py  file_utils.py  hash_utils.py  string_utils.py
src/validation/: __init__.py  calibration.py  comprehensive_medical_codes.py  confidence.py  cross_field.py  data_normalizer.py  dual_pass.py  human_review.py  medical_codes.db  medical_codes.py  pattern_detector.py
tests/: __init__.py  conftest.py  run_quick_tests.py  test_agent_optimizations.py  test_api.py  test_azure_connection.py  test_comprehensive_validation.py  test_field_extraction.py  test_integration.py  test_optimization.py  test_pipeline.py  test_validation.py  validate_phase5.py
tests/accuracy/: test_extraction_accuracy.py
tests/e2e/: test_complete_auth_flow.py
tests/integration/: test_api_processing.py  test_auth_integration.py  test_e2e_pipeline.py  test_human_review_interrupt.py  test_phase5_integration.py  test_pipeline_flow.py
tests/security/: test_auth_security.py
tests/unit/: test_agent_base.py  test_agent_utils.py  test_analyzer_agent.py  test_api.py  test_auth_api.py  test_benchmark.py  test_component_detector.py  test_confidence_calibration.py  test_dynamic_prompt.py  test_enhanced_exports.py  test_export.py  test_extraction_config.py  test_extractor_agent.py  test_extractor_pass_agents.py  test_file_factory.py  test_finance_schemas.py  test_gemma_backend.py  test_health_routes.py  test_image_enhancer.py  test_layout_agent.py  test_lm_client.py  test_modality.py  test_model_router.py  test_monitoring.py  test_multi_record_phase1.py  test_multi_record_phase2.py  test_multi_record_phase3.py  test_multi_record_phase4.py  test_orchestrator.py  test_phi_mask.py  test_preprocessing_data.py  test_queue.py  test_result_store.py  test_schema_generator.py  test_schema_proposal.py  test_schema_versioning.py  test_security.py  test_settings.py  test_splitter_agent.py  test_string_utils.py  (+7 more)
(+28 files in other folders)
