[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-extraction-system"
version = "2.0.0"
description = "HIPAA-compliant local agentic medical document extraction system"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.11"
authors = [
    {name = "Rayyan Ahmed"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed",
]
keywords = [
    "medical-extraction",
    "document-processing",
    "vlm",
    "langgraph",
    "hipaa",
    "ocr",
    "healthcare",
]

dependencies = [
    # Agent Framework
    "langchain>=1.0.0",
    "langchain-core>=0.3.25",
    "langchain-community>=0.3.12",
    "langchain-openai>=0.2.14",
    "langgraph>=0.2.60",
    "langgraph-checkpoint>=2.0.10",

    # Memory Layer
    "mem0ai>=0.1.29",
    "faiss-cpu>=1.9.0",
    "sentence-transformers>=3.3.0",

    # VLM Client
    "openai>=1.55.0",
    "tenacity>=9.0.0",
    "httpx>=0.27.0",

    # PDF Processing
    "PyMuPDF>=1.25.0",
    "Pillow>=11.0.0",
    "opencv-python>=4.10.0",
    "numpy>=1.26.0",

    # Data Validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # API Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.17",
    "starlette>=0.41.0",

    # Task Queue
    "celery>=5.4.0",
    "kombu>=5.4.0",
    "redis>=5.2.0",

    # Security
    "cryptography>=43.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.2.0",

    # Export
    "openpyxl>=3.1.5",
    "pandas>=2.2.0",
    "xlsxwriter>=3.2.0",

    # UI
    "streamlit>=1.40.0",
    "streamlit-extras>=0.4.0",

    # Monitoring
    "prometheus-client>=0.21.0",
    "structlog>=24.4.0",
    "python-json-logger>=2.0.7",

    # Configuration
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.5.0",
    "hypothesis>=6.100.0",
    "black>=24.10.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "isort>=5.13.0",
    "bandit>=1.7.0",
    "safety>=3.0.0",
]

gpu = [
    "faiss-gpu>=1.9.0",
]

[project.urls]
"Homepage" = "https://github.com/rayyanahmed/doc-extraction-system"
"Bug Tracker" = "https://github.com/rayyanahmed/doc-extraction-system/issues"
"Documentation" = "https://github.com/rayyanahmed/doc-extraction-system/docs"

[project.scripts]
doc-extract = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["py.typed", "*.json", "*.yaml", "*.yml"]

[tool.black]
line-length = 100
target-version = ['py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "C4",     # flake8-comprehensions
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # pylint
    "RUF",    # Ruff-specific rules
    "S",      # flake8-bandit (security)
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "G",      # flake8-logging-format
    "INP",    # flake8-no-pep420
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PYI",    # flake8-pyi
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SLOT",   # flake8-slots
    "TID",    # flake8-tidy-imports
    "INT",    # flake8-gettext
]
ignore = [
    "E501",   # line too long (handled by black)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "S101",   # use of assert (needed for tests)
    "COM812", # missing trailing comma (conflicts with black)
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "ARG", "PLR2004"]
"scripts/*" = ["T20"]

[tool.ruff.isort]
known-first-party = ["src"]
force-single-line = false
lines-after-imports = 2

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
show_column_numbers = true
pretty = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_no_return = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "cv2.*",
    "fitz.*",
    "celery.*",
    "redis.*",
    "streamlit.*",
    "structlog.*",
    "prometheus_client.*",
    "mem0.*",
    "faiss.*",
    "sentence_transformers.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "-p no:warnings",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "accuracy: marks tests as accuracy/golden dataset tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
omit = [
    "tests/*",
    "scripts/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "if TYPE_CHECKING:",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.bandit]
exclude_dirs = ["tests", "scripts"]
skips = ["B101", "B601"]
